Implemented first ref hook, pushing so I can test with multiple accounts

--- a/src/App.css
+++ b/src/App.css
@@ -27,10 +27,13 @@
   margin-right: 3em;
  }
 .upper {
-  height: 10vh;
-  justify-content: left;
-  align-items:center;
+  /* height: 10vh; */
+  justify-content: center;
+  align-items: center;
   display: flex;
+}
+.upperElement{
+  margin-right: 10em;
 }
 .lower{
   text-align: center;
