--- a/src/App.css
+++ b/src/App.css
@@ -16,15 +16,19 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 80px;
+  padding: 100px;
  }
  .form {
   height: 20vh;
-  width: 20vw;
+  /* width: 20vw; */
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
-  margin-right: 1em;
+  /* margin-right: 1em; */
+  /* margin-left: 1em; */
+  padding-right: 1em;
+  padding-left: 1em;
+  /* padding: 1em; */
  }
  .button {
   width: 20vw;
@@ -38,9 +42,12 @@
   /* align-items: center; */
   display: flex;
   /* background-color: #FA8072; Salmon */
-  background-color: #F96153;
+  /* background-color: #F96153; Better? */
+  /* background-color: #C51162; */ /* Probably best^ I'm thinking maybe just lighten these colors */
+  /* background-color: #F50057; */
+  background-color: #FF2E78;
   overflow:hidden;
-  width: 80vw;
+  width: 95vw;
   border-radius: 15px;
   /* height: 100vh; */
 }
@@ -50,9 +57,20 @@
 }
 .potBanner{
   /* background-color: #13c5f1; */
-  background-color: #53A6F9;
+  /* background-color: #53A6F9; */
+  /* background-color: #303F9F; */
+  /* background-color: #3F51B4; */
+  background-color: #6070C7;
   font-size: 20px;
   width: 40vw;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+.addressBanner{
+  /* background-color: #3F51B4; */
+  background-color: #6070C7;
+  font-size: 20px;
+  width: 70vw;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
 }
@@ -61,4 +79,19 @@
   display: flex;
   justify-content: center;
   /* height: 20vh; */
+}
+::-webkit-input-placeholder {
+  text-align: center;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+  text-align: center;  
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+  text-align: center;  
+}
+
+:-ms-input-placeholder {  
+  text-align: center; 
 }
