--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,48 @@
   align-items:center;
   height: 100vh;
  }
+.navbar {
+  background-color: #333333;
+  display: flex;
+  /* let's align the items so everything is nice and centered */
+  align-items: center;
+  width: 100vw;
+}
+.navbar a {
+  color: #e7e7e7;
+  text-decoration: none;
+}
+.navbar ul {
+  /* Let's reset the margin and padding of the list so it's is flush. */
+   margin: 0;
+   padding: 0;
+   /* Let's remove the bullet points */
+   list-style-type: none;
+   /* display the list flex and align the items centered */
+   display: flex;
+   align-items:center;
+ }
+ .navbar .brand {
+  display: block;
+  color: #e7e7e7;
+ /* Remove padding from top/bottom and add 24px padding right/left */
+  padding: 0 24px;
+  font-size: 24px;
+}
+.navbar ul li a {
+  color: #e7e7e7;
+  padding: 24px;
+  /*Let's make the anchor display block.
+     This will ensure when we hover, focus, or is active we get the full width and height 
+      of the container.
+  */
+  display: block;
+}
+/* When a use hovers or focuses to a link change the background */
+.navbar ul a:hover,
+.navbar ul a:focus {
+  background-color: #272727;
+}
  .about {
   text-align: center;
   justify-content: top;
