--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,14 @@
   width: 70%;
   padding: 0%;
 }
+.tourimgshortlehavre {
+  width: 45%;
+  padding: 0%;
+}
+.tourimglonglehavre {
+  width: 55%;
+  padding: 0%;
+}
 .vtourimgframe{
   display: flex;
   flex-direction: column;
@@ -51,10 +59,26 @@
   align-items: center;
   font-size:x-large;
   font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+  
+  /* width: 35%; */
   /* width: 60%;   */
 }
 .tourcardheader {
   background-color: #6070C7;
+  /* font-size: 20px; */
+  /* width: 30vw; */
+  width: 35vw;
+  display:block;
+  margin: auto;
+  margin-top: .5em;
+  padding: 30px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  border-radius: 15px;
+  font-variant: small-caps;
+}
+.tourcardsubheader {
+  background-color: #a12150;
   /* font-size: 20px; */
   /* width: 30vw; */
   width: 35vw;
